deployment/openshift/chatbot/template-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-ui
  labels:
    app: chatbot
    component: ui
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: chatbot
    component: ui
